<resources>
    <string name="app_name">yhw2</string>
    <string name="edit_text_hint">Что надо сделать...</string>
    <string name="save_button">СОХРАНИТЬ</string>
    <string name="list_title">Мои дела</string>
    <string name="number_of_completed_tasks">Выполнено -</string>
    <string name="importance">Важность</string>
    <string name="time_todo">Сделать до</string>
    <string name="delete">Удалить</string>
    <string name="importance_normal">Нет</string>
    <string name="importance_high">!! Высокий</string>
    <string name="importance_low">Низкий</string>
</resources>